Fix god info overlay overflow

--- a/smitegods.less
+++ b/smitegods.less
@@ -115,12 +115,13 @@ input[type=button], input[type=text] {
 	position: fixed;
 	top: 0;
 	left: 0;
-	right: 0;
-	bottom: 0;
+	width: 100%;
+	height: 100vh;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.6);
 
 	&.active {
 		display: block;
-		background-color: rgba(0, 0, 0, 0.6);
 	}
 
 	#god-overlay-close-handle {
@@ -133,11 +134,12 @@ input[type=button], input[type=text] {
 		padding: 2px 4px;
 		background-color: #ccc;
 		cursor: pointer;
+		text-align: center;
 	}
 
 	.goddetails {
 		display: block;
-		margin: auto;
+		margin: 1em auto;
 		max-width: 500px;
 		background-color: #fff;
 		padding: 10px;
